v 1.0.2.2 (7 nov)

Changes by Aedx:
___

	Fixed incorrect grassy theme layout
	Typos

Storage upgrades in workshop will no longer affect Accelerators


v 1.0.2.1 (5 nov)

Resource-heavy missions have less chance to fail.
Failed missions will return 40-70% of spent resources
Fixed that one bug with lunar outposts

v 1.0.2.0 (4 nov)

First race arrives 15 year earlier after the reset
Moon base should give correct population bonus
Biolab will be togglable once Biofuel is researched
Building type missions will display effects
Lots of typo fixes by Ædx

Unobtainium
Moon Outpost
Unobtainium Axe
Unobtainium Saw
Nanosuits

v 1.0.1.2 (3 nov)

Space Stations
Space missions can now fail based on their chance
Hubble Telescope

v 1.0.0.1 (31 oct)

Fixed astrolabe not giving correct bonus to observatory
Fixed biofuel not affecting oil

Added two more planets

v 1.0.0.0 (30 oct)

Senators and leader can be assigned, unassigned and promoted based on exp (no effect yet)
Space and missions (partly based on a space mod by Fringeware)

Rocket recipe

Sattelites
Orbital Engineering (TBD)
Biochemistry
Biofuel processing

Updated "panic message" to be more informative and less scary

v 0.9.9.5 (15 oct)

Railgun
+/- options in village will be now fixed
job filter will now work correctly
Village, Science and Workshop panels will retain collapsible status

Changes by xranti:
___

	The x100 refine catnip link now respects the wood refine ratio (bonus from bio labs and lumber mills in iron will). (http://redd.it/2i5jzp)
	The reactor bonus now displays in the resource tooltips correctly. (http://redd.it/2idy8s)
	The solar revolution bonus now displays as a single percentage on the religion tab. (http://redd.it/2igc4g)
	Enriched uranium effects are now reflected in the resource table. (http://redd.it/2ij88k)
	The classic theme now uses a white background, rather than the browser's default. (http://redd.it/2ixq1o)
	Accelerators no longer work even if you have no titanium.