@@ -9,19 +9,19 @@
 
 		<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.7.0/dojo/dojo.js"></script>
 
-		<script src="core.js?v=1.0.2.1" type="text/javascript"></script>
-		<script src="resources.js?v=1.0.2.1" type="text/javascript"></script>
-		<script src="calendar.js?v=1.0.2.1" type="text/javascript"></script>
-		<script src="buildings.js?v=1.0.2.1" type="text/javascript"></script>
-		<script src="village.js?v=1.0.2.1" type="text/javascript"></script>
-		<script src="science.js?v=1.0.2.1" type="text/javascript"></script>
-		<script src="workshop.js?v=1.0.2.1" type="text/javascript"></script>
-		<script src="diplomacy.js?v=1.0.2.1" type="text/javascript"></script>
-		<script src="religion.js?v=1.0.2.1" type="text/javascript"></script>
-		<script src="achievements.js?v=1.0.2.1" type="text/javascript"></script>
-		<script src="space.js?v=1.0.2.1" type="text/javascript"></script>
+		<script src="core.js?v=1.0.2.2" type="text/javascript"></script>
+		<script src="resources.js?v=1.0.2.2" type="text/javascript"></script>
+		<script src="calendar.js?v=1.0.2.2" type="text/javascript"></script>
+		<script src="buildings.js?v=1.0.2.2" type="text/javascript"></script>
+		<script src="village.js?v=1.0.2.2" type="text/javascript"></script>
+		<script src="science.js?v=1.0.2.2" type="text/javascript"></script>
+		<script src="workshop.js?v=1.0.2.2" type="text/javascript"></script>
+		<script src="diplomacy.js?v=1.0.2.2" type="text/javascript"></script>
+		<script src="religion.js?v=1.0.2.2" type="text/javascript"></script>
+		<script src="achievements.js?v=1.0.2.2" type="text/javascript"></script>
+		<script src="space.js?v=1.0.2.2" type="text/javascript"></script>
 
-		<script src="game.js?v=1.0.2.1" type="text/javascript"></script>
+		<script src="game.js?v=1.0.2.2" type="text/javascript"></script>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -399,7 +399,7 @@
 					<a href="#" onclick="dev();">#</a> |
 					<a href="#" onclick="wipe();">Wipe</a> |
 
-					<a href="#" onclick="$('#changelogDiv').toggle();">Ver 1.0.2.1</a>
+					<a href="#" onclick="$('#changelogDiv').toggle();">Ver 1.0.2.2</a>
 
 				</div>
 			</div>
@@ -422,8 +422,8 @@
 						Unobtainium Saw
 						Nanosuits
 
-					Rev: 1
-						-
+					Rev: 2
+						Fixes
 
 
 				</pre>
